[gd_scene load_steps=4 format=2]

[ext_resource path="res://ArcadeKeyboard/ArcadeKeyboard.tscn" type="PackedScene" id=1]
[ext_resource path="res://ArcadeKeyboard/LargeFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Demo.gd" type="Script" id=3]

[node name="Demo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.41425
margin_bottom = 1.41425
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArcadeKeyboard" parent="." instance=ExtResource( 1 )]
margin_left = 80.0
margin_top = 161.0
margin_right = 516.0
margin_bottom = 289.0

[node name="NameEdit" type="TextEdit" parent="."]
margin_left = 73.8751
margin_top = 85.4737
margin_right = 516.875
margin_bottom = 125.474
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="char_key_pressed" from="ArcadeKeyboard" to="." method="_on_ArcadeKeyboard_char_key_pressed"]
[connection signal="ctrl_key_pressed" from="ArcadeKeyboard" to="." method="_on_ArcadeKeyboard_ctrl_key_pressed"]
